# modbus_rtu_motor

./: .gitignore  CMakeLists.txt  errorcode.py
example/: mmk2_spine.cpp
include/: modbus_client.hpp  spine_motor.hpp
src/: modbus_client.cpp  spine_motor.cpp
